// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleList renders correctly 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container"
    >
      <article
        class="box"
      >
        <h2
          class="header"
        >
          The Statue of Liberty's torch heads to new museum
        </h2>
        <div
          class="box"
        >
          <button
            class="button"
          >
            show more
          </button>
        </div>
      </article>
      <article
        class="box"
      >
        <h2
          class="header"
        >
          You can take a pie on a plane
        </h2>
        <div
          class="box"
        >
          <button
            class="button"
          >
            show more
          </button>
        </div>
      </article>
    </div>
  </div>
</div>
`;

exports[`ArticleList tests renders correctly 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container"
    >
      <article
        class="box"
      >
        <h2
          class="header"
        >
          A title
        </h2>
        <div
          class="box"
        >
          <button
            class="button"
          >
            show more
          </button>
        </div>
      </article>
      <article
        class="box"
      >
        <h2
          class="header"
        >
          A title
        </h2>
        <div
          class="box"
        >
          <button
            class="button"
          >
            show more
          </button>
        </div>
      </article>
    </div>
  </div>
</div>
`;
